<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.aaiHomeActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_Home"
            android:title="@string/nav_item_home"/>
        <item
            android:id="@+id/navigation_PreEngineering"
            android:title="@string/nav_item_PreEngineering"/>
        <item
            android:id="@+id/navigation_Setup"
            android:title="@string/nav_item_Setup" />
        <item
            android:id="@+id/navigation_Reports"
            android:title="@string/nav_item_Report">
            <menu>
                <item
                    android:id="@+id/navigation_Create_Report"
                    android:title="@string/nav_item_Create_Report"/>
                <item
                    android:id="@+id/navigation_Open_Report"
                    android:title="@string/nav_item_Open_Report"/>
                <item
                    android:id="@+id/navigation_Current_Report"
                    android:title="@string/nav_item_Current_Report"/>
            </menu>
        </item>
    </group>
</menu>